[gd_scene load_steps=17 format=3 uid="uid://dmcjcfunlt6m3"]

[ext_resource type="Texture2D" uid="uid://dy30qp85ob0y3" path="res://Art/Cinema_Lines_Simple-1.png.png" id="1_6ku88"]
[ext_resource type="Script" path="res://Scripts/break_effect.gd" id="1_svqi7"]
[ext_resource type="Texture2D" uid="uid://bv5it1e2skb1d" path="res://Art/Cinema_Lines_Triangle-5.png (1).png" id="2_we5hw"]
[ext_resource type="Texture2D" uid="uid://chdrw2i02f4to" path="res://Art/Cinema_Lines_Triangle-5.png.png" id="3_cr0xo"]
[ext_resource type="FontFile" uid="uid://0n58x5h2eb8o" path="res://Fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="4_d0w3y"]
[ext_resource type="Texture2D" uid="uid://dh26c082e25c3" path="res://Art/QTESingleCircle.png" id="5_hymrm"]
[ext_resource type="PackedScene" uid="uid://dpov4rnb55tso" path="res://Scenes/damage_particles.tscn" id="5_xy6uf"]
[ext_resource type="AudioStream" uid="uid://c8xeu5yl5x3p3" path="res://Audio/Drum1BitCrush.wav" id="7_xngip"]
[ext_resource type="AudioStream" uid="uid://viow8jwfmnyp" path="res://Audio/Drum2BitCrush.wav" id="8_5qa5e"]
[ext_resource type="AudioStream" uid="uid://dtrisse0wsdot" path="res://Audio/shatter.wav" id="10_a0s51"]
[ext_resource type="AudioStream" uid="uid://c46r535whloab" path="res://Audio/shatterCrunch.wav" id="11_rimqv"]
[ext_resource type="AudioStream" uid="uid://dl22trj21kdk7" path="res://Audio/shatterResolve.wav" id="12_riqpm"]
[ext_resource type="AudioStream" uid="uid://dx475ypigwhmm" path="res://Audio/Bass Impact Glide.mp3" id="12_rrq6n"]

[sub_resource type="Animation" id="Animation_kqtjr"]
resource_name = "BreakTextZoom"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1), Vector2(0.9, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomTriangle2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BottomTriangle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0803764, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ImpactParticles")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.197379),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enemySpriteGrowth"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GiantMovingTriangle:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(272, 374), Vector2(448, 532)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GiantMovingTriangle2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(863, 289), Vector2(687, 131)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("GiantMovingTriangle:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("GiantMovingTriangle2:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playDrumRoll"
}]
}
tracks/12/type = "method"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playDrumCrash"
}]
}
tracks/13/type = "method"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath(".")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playShatterCrunch"
}]
}
tracks/14/type = "method"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Shatter")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/15/type = "method"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Bass")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/16/type = "method"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("ShatterResolve")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Flash:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 0.00332265, 0.196796),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Flash:modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(-0.00243661, 0.197681),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_a3ji8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomTriangle2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BottomTriangle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GiantMovingTriangle:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(290, 357)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GiantMovingTriangle2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(863, 289)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GiantMovingTriangle:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GiantMovingTriangle2:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Flash:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Flash:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_11sg4"]
_data = {
"BreakTextZoom": SubResource("Animation_kqtjr"),
"RESET": SubResource("Animation_a3ji8")
}

[node name="BreakEffect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
size_flags_vertical = 4
script = ExtResource("1_svqi7")

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="Cinema Line Top" type="Sprite2D" parent="Node2D"]
modulate = Color(0, 0, 0, 1)
position = Vector2(576, 192)
scale = Vector2(38, 12)
texture = ExtResource("1_6ku88")

[node name="Cinema Line Bottom" type="Sprite2D" parent="Node2D"]
modulate = Color(0, 0, 0, 1)
position = Vector2(571, 744)
scale = Vector2(38, 12)
texture = ExtResource("1_6ku88")

[node name="BottomTriangle" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(272, 374)
scale = Vector2(18, 18)
texture = ExtResource("3_cr0xo")

[node name="GiantMovingTriangle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_repeat = 2
position = Vector2(290, 357)
scale = Vector2(54, 54)
texture = ExtResource("3_cr0xo")

[node name="BottomTriangle2" type="Sprite2D" parent="."]
position = Vector2(863, 289)
scale = Vector2(18, 18)
texture = ExtResource("2_we5hw")

[node name="GiantMovingTriangle2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(863, 289)
scale = Vector2(54, 54)
texture = ExtResource("2_we5hw")

[node name="Flash" type="Sprite2D" parent="."]
visible = false
position = Vector2(568, 330)
scale = Vector2(77, 77)
texture = ExtResource("5_hymrm")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.153589
scale = Vector2(2, 2)
pivot_offset = Vector2(197, 32)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 20
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("4_d0w3y")
theme_override_font_sizes/font_size = 64
text = "BREAK!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_11sg4")
}

[node name="ImpactParticles" parent="." instance=ExtResource("5_xy6uf")]
position = Vector2(561, 317)
amount = 40
lifetime = 2.5
speed_scale = 3.0
emission_shape = 1
emission_sphere_radius = 1.0

[node name="DrumRoll" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xngip")
volume_db = -10.0

[node name="ShatterCrunch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_rimqv")
volume_db = -13.415

[node name="DrumCrash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5qa5e")
volume_db = -80.0

[node name="Shatter" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_a0s51")
volume_db = -80.0

[node name="Bass" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_rrq6n")
volume_db = -9.092
pitch_scale = 1.14

[node name="ShatterResolve" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_riqpm")
volume_db = -15.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
